docs-archive/apache-airflow-providers-microsoft-azure/12.5.0/_sources/_api/airflow/providers/microsoft/azure/hooks/base_azure/index.rst.txt
airflow.providers.microsoft.azure.hooks.base_azure
==================================================

.. py:module:: airflow.providers.microsoft.azure.hooks.base_azure


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.azure.hooks.base_azure.AzureBaseHook


Module Contents
---------------

.. py:class:: AzureBaseHook(sdk_client, conn_id = 'azure_default')

   Bases: :py:obj:`airflow.sdk.BaseHook`


   This hook acts as a base hook for azure services.

   It offers several authentication mechanisms to authenticate
   the client library used for upstream azure hooks.

   :param sdk_client: The SDKClient to use.
   :param conn_id: The :ref:`Azure connection id<howto/connection:azure>`
       which refers to the information to connect to the service.


   .. py:attribute:: conn_name_attr
      :value: 'conn_id'



   .. py:attribute:: default_conn_name
      :value: 'azure_default'



   .. py:attribute:: conn_type
      :value: 'azure'



   .. py:attribute:: hook_name
      :value: 'Azure'



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:attribute:: sdk_client


   .. py:attribute:: conn_id
      :value: 'azure_default'



   .. py:method:: get_conn()

      Authenticate the resource using the connection id passed during init.

      :return: the authenticated client.



