docs-archive/apache-airflow-providers-microsoft-azure/15.2.0/_sources/_api/airflow/providers/microsoft/azure/hooks/base_azure/index.rst.txt
airflow.providers.microsoft.azure.hooks.base_azure
==================================================

.. py:module:: airflow.providers.microsoft.azure.hooks.base_azure


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.azure.hooks.base_azure.AzureBaseHook


Module Contents
---------------

.. py:class:: AzureBaseHook(sdk_client = None, conn_id = 'azure_default')

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   This hook acts as a base hook for azure services.

   It offers several authentication mechanisms to authenticate
   the client library used for upstream azure hooks.

   :param sdk_client: The SDKClient to use.
   :param conn_id: The :ref:`Azure connection id<howto/connection:azure>`
       which refers to the information to connect to the service.


   .. py:attribute:: conn_name_attr
      :value: 'conn_id'



   .. py:attribute:: default_conn_name
      :value: 'azure_default'



   .. py:attribute:: conn_type
      :value: 'azure'



   .. py:attribute:: hook_name
      :value: 'Azure'



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:attribute:: sdk_client
      :value: None



   .. py:attribute:: conn_id
      :value: 'azure_default'



   .. py:method:: get_conn()

      Authenticate the resource using the connection id passed during init.

      :return: the authenticated client.



   .. py:method:: get_credential(*, conn = None)

      Get Azure credential object for the connection.

      Azure Identity based credential object (``ClientSecretCredential``, ``DefaultAzureCredential``) can be used to get OAuth token using ``get_token`` method.
      Older Credential objects (``ServicePrincipalCredentials``, ``AzureIdentityCredentialAdapter``) are supported for backward compatibility.

      :return: The Azure credential object



   .. py:method:: get_token(*scopes, **kwargs)

      Request an access token for `scopes`.

      To use this method, set `use_azure_identity_object: True` in the connection extra field.
      ServicePrincipalCredentials and AzureIdentityCredentialAdapter don't support `get_token` method.



